adding 404 page, and adding gem to produce sitemap.xml file

--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,5 @@ title: Sandeep Gupta
 production_url : http://sangupta.github.io
 source: /git/sangupta.github.io
 safe: true
+gems:
+  - jekyll-sitemap
