--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,8 @@ author:
 
 # code syntax highlighter to use
 highlighter: pygments
+markdown: redcarpet
+# pygments: true
 
 # file format encodings
 encoding: utf-8
