--- a/_data/tags.yml
+++ b/_data/tags.yml
@@ -4,3 +4,29 @@
 - slug: java
   name: Java
 
+- slug: just-like-that
+  name: Just Like That
+
+- slug: my-projects
+  name: My Projects
+
+- slug: actionscript
+  name: ActionScript
+
+- slug: adobe-air
+  name: Adobe AIR
+
+- slug: apache-flex
+  name: Apache Flex
+
+- slug: blogger
+  name: Blogger
+
+- slug: code-challenge
+  name: Code Challenge
+
+- slug: evenstar
+  name: Evenstar
+
+- slug: interview
+  name: Interview Questions
