--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ serving_publicly: true
 
 # code syntax highlighter to use
 highlighter: pygments
-markdown: redcarpet
+markdown: kramdown
 
 redcarpet:
   extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
